plugins {
    id 'java'
    id 'maven-publish'
}

sourceCompatibility = 1.17
targetCompatibility = 1.17

group 'honeyroasted.jype'
version '0.0.24'

repositories {
    mavenCentral()
    maven { url = 'https://jitpack.io' }
}

dependencies {
    testImplementation('org.ow2.asm:asm:9.5',
            'org.ow2.asm:asm-util:9.5',
            'org.ow2.asm:asm-tree:9.5',
            'org.ow2.asm:asm-commons:9.5',
            'org.ow2.asm:asm-analysis:9.5')

    testImplementation("org.junit.jupiter:junit-jupiter:5.9.2")
}

task ghpagesJavadocs(type: Javadoc) {
    destinationDir = file("/docs")

    source = sourceSets.main.allJava
    classpath = configurations.runtimeClasspath
}

task javadocJar(type: Jar) {
    from javadoc
    archiveClassifier.set("javadoc")
}

task sourceJar(type: Jar) {
    from sourceSets.main.allSource
    archiveClassifier.set("source")
}

artifacts {
    archives javadocJar, sourceJar
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifactId = rootProject.name

            from components.java

            artifact sourceJar
            artifact javadocJar
        }
    }
}

test {
    useJUnitPlatform()
}